<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
...

            <LinearLayout
                android:id="@+id/company_name_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
...

                <EditText
                    android:id="@+id/enter_company_name_et"
                    style="@style/enter_text_style"
                    android:layout_width="0dp"
...
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/column_speed_layout">

                <TextView
...

            <LinearLayout
                android:id="@+id/cut_rate_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
...

                <EditText
                    android:id="@+id/cut_rate_et"
                    style="@style/enter_text_style"
                    android:layout_width="0dp"
...

            <LinearLayout
                android:id="@+id/estimation_waste_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
...

                <EditText
                    android:id="@+id/estimation_waste_et"
                    style="@style/enter_text_style"
                    android:layout_width="0dp"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/know_column_speed"
                    style="@style/labels_eff_calc"
                    android:layout_width="wrap_content"
...

                <EditText
                    android:id="@+id/column_speed_et"
                    style="@style/enter_text_style"
                    android:layout_width="0dp"
...

            <LinearLayout
                android:id="@+id/cuts_per_sec_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
...

                <EditText
                    android:id="@+id/ax_material_section"
                    style="@style/enter_text_style"
                    android:layout_width="0dp"
...

            <LinearLayout
                android:id="@+id/auger_speed_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
...

                <EditText
                    android:id="@+id/auge_speed_et"
                    style="@style/enter_text_style"
                    android:layout_width="0dp"
...

            <LinearLayout
                android:id="@+id/efficiency_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
...

                <TextView
                    android:id="@+id/efficiency_tv"
                    style="@style/labels_eff_calc"
                    android:layout_width="wrap_content"
...
