...
    android:id="@+id/machine_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".machineDetailFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="?attr/actionBarSize"
            android:id="@+id/machine_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/description_TV"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginStart="8dp"
...
                android:src="@drawable/place_holder_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/data_sheet_tv"
                style="@style/LinkeTextInDetailStyle"
                android:layout_width="@dimen/but_w"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginEnd="8dp"
                android:text="@string/data"
                app:layout_constraintBottom_toBottomOf="@+id/lubrication_chart_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lubrication_chart_tv" />

            <TextView
                android:id="@+id/lubrication_chart_tv"
                style="@style/LinkeTextInDetailStyle"
...
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_TV" />

            <TextView
                style="@style/LinkeTextInDetailStyle"
                android:id="@+id/spare_parts_tv"
                android:layout_width="@dimen/but_w"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/spare_parts"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lubrication_chart_tv" />

            <Button
                android:id="@+id/make_widget"
                android:layout_width="@dimen/but_w"
                android:layout_height="@dimen/but_h"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/select_for_widget"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spare_parts_tv" />

            <Button
                android:id="@+id/eff_calculation"
                android:layout_width="@dimen/but_w"
                android:layout_height="@dimen/but_h"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginTop="16dp"
                android:text="@string/calculate_efficiency"
                android:textAlignment="center"
...
