<resources>
    <string name="app_name">JCMachines</string>
    <!-- Strings related to login -->
    <string name="user_email">User Email</string>
    <string name="Signout">Sign Out</string>
    <string name="title_machine_list">JC Steele Machines</string>
    <string name="title_machine_detail">machine Detail</string>
    <string name="data"> See Data Sheet</string>
    <string name="lubrication_chart">See Lubrication Chart</string>
    <string name="spare_parts">See Spare Parts List</string>
    <string name="description">Description</string>
    <string name="long_machine_name">This Machine Name</string>
...
    <string name="title_sparepart_detail">SparePart Detail</string>
    <string name="spare_part_name">Spare Part Name</string>
    <string name="spare_part_description">Spare Part Description</string>
    <string name="spare_part_section">Spare Part Section</string>
    <string name="loaded_once_preference_key" translatable="false">loaded_once</string>
    <string name="loaded_once_preference_value" translatable="true">false</string>
    <string name="select_for_widget">Select a machine to Widget</string>
    <string name="my_machine_to_widget_key" translatable="false">machine_id</string>
    <string name="my_machine_name_for_widget_key" translatable="false">machine_name</string>
    <string name="my_machine_pic_link_for_widget_key" translatable="false">machine_picture_link</string>
    <string name="my_machine_widget_id_key" translatable="false">machine_widget_id</string>
    <string name="my_machine_to_widget_default" translatable="false">id</string>
    <string name="my_machine_name_for_widget_default" translatable="false">name</string>
    <string name="add_a_widget">Select a machine to make a widget</string>
    <string name="updating_your_widget_with">Updating your Widgets to: </string>
...
    <string name="have_internet">App has internet connection</string>
    <string name="lost_connection">App lost internet connection</string>
    <string name="already_widget">Remove from widgets</string>
    <string name="will_remove_thisWidget">Will remove this machine from widgets</string>
    <string name="loading">Loading</string>
    <string name="no_network">No network connect to the internet and try again</string>
    <string name="calculate_efficiency">Calculate efficiency</string>
    <string name="title_activity_add_eff_calculation">AddEffCalculationActivity</string>
    <string name="see_all_calculations">Go to Brick Eff Calculations</string>
    <string name="enter_company_name">Company Name: </string>
    <string name="imperial">Imperial unit: </string>
    <string name="metric"> Metric unit:</string>
    <string name="system_does_not_have_cutter">No cutter</string>


    <string name="estimation_of_waste">Estimation of % of waste: </string>

    <string name="known">Known</string>
    <string name="not_known">Not known</string>

    <string name="enter_void_percentage">Enter void %: </string>
    <string name="efficiency">Efficiency: </string>
    <string name="efficiency_unit_imperial">%</string>
    <string name="efficiency_calculator_activity_name">Efficiency Calculator</string>

    <string name="need_to_calculate_product_area">Need to calculate total material area</string>
    <string name="need_to_calculate_column_speed">Enter column speed</string>
    <string name="dont_need_to_calculate_column_speed">Enter Column Speed</string>
    <string name="dont_need_to_calculate_product_area">Enter total material area</string>

...
